--- a/day17/homework/othfud.html
+++ b/day17/homework/othfud.html
@@ -6,7 +6,7 @@
     <title>Other Food</title>
 </head>
 <body>
-    <b><i>Bread = 90 TETRI /INE</i></b>
+    <b><i>Bread = 90 TETRI /ONE</i></b>
     <br><img src="https://th.bing.com/th/id/OIP.A_cnMERtERd1nnPZetjrqQAAAA?rs=1&pid=ImgDetMain" alt="bread" width="200" height="200">
     <br><i><b>Stock=43</b></i>
     <button>Put in bucket</button>
