--- a/day60/Homework/index.html
+++ b/day60/Homework/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="css">css</div>
+    <div>U found me</div>
 </body>
 </html>
