--- a/day60/classwork/index.html
+++ b/day60/classwork/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="css">css</div>
+    <div class="div1">
+        <p>div1</p>
+    </div>
+    <div class="div2">
+        <p>div2</p>
+    </div>
+    <div class="div3">
+        div3
+    </div>
 </body>
 </html>
