--- a/day 49/classwork/lesson49.html
+++ b/day 49/classwork/lesson49.html
@@ -1,1 +1,38 @@
-<!--no classwork-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+       <div>
+        <table class="tabl" border="1px">
+            <tr>
+             <td>tornado</td>
+            </tr>
+         </table>
+         <nav class="tree">Tree</nav>
+           <table class="table" border="1px">
+            <tr>
+                <td class="celing">celing</td>
+            </tr>
+            <tr>
+                <td class="mom">mom</td>
+            </tr>
+            <tr>
+                <td class="dad">dad</td>
+            </tr>
+            <tr>
+                <td class="child">child</td>
+            </tr>
+            <tr>
+                <td class="floor">basement</td>
+            </tr>
+           </table>
+        </div>
+</header>
+</body>
+</html>
