--- a/day 49/homework/index.html
+++ b/day 49/homework/index.html
@@ -4,35 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-       <div>
-        <table class="tabl" border="1px">
-            <tr>
-             <td>tornado</td>
-            </tr>
-         </table>
-         <nav class="tree">Tree</nav>
-           <table class="table" border="1px">
-            <tr>
-                <td class="celing">celing</td>
-            </tr>
-            <tr>
-                <td class="mom">mom</td>
-            </tr>
-            <tr>
-                <td class="dad">dad</td>
-            </tr>
-            <tr>
-                <td class="child">child</td>
-            </tr>
-            <tr>
-                <td class="floor">basement</td>
-            </tr>
-           </table>
-        </div>
-</header>
+    <div class="sticky">Hello!</div>
 </body>
 </html>
