--- a/day 31/classwork/index.html
+++ b/day 31/classwork/index.html
@@ -1,23 +1,6 @@
 <p>======================================================================================================================================</p>
 <link rel="stylesheet" href="style.css">
-<style>
-    body{
-        background-color:black;
-    }
-    h1,p,button{
-        color: red;
-        text-align: center;
-        background-color:black;
-    }
-    Img{
-        display: block;
-        margin: auto;
-    }
-    .myDiv{
-        text-align: center;
-    }
-</style>
-<h1 style="font-size: 60px;">Subject 235,254,645,237,001,349,126</h1>
+<h1>Subject 235,254,645,237,001,349,126</h1>
 <p>Name:Amiko Amiridze</p>
 <p>Born in 2010(14 Years old)</p>
 <p>Galaxy:MILKYWAY</p>
@@ -34,7 +17,7 @@
 <P>Address:######## ####</P>
 <p>Studies in:# School</p>
 <p>======================================================================================================================================</p>
-<h1 style="font-size: 60px;">STATS</h1>
+<h1>STATS</h1>
 <p>physics:C</p>
 <p>Energy:B</p>
 <p>Inteligent:A</p>
@@ -43,6 +26,6 @@
 <p>Powers:NONE</p>
 <P>Mentality:S</P>
 <div class="myDiv">
-<button style="font-size:50px;border-color: red;">NOT A THREAT</button>
+<button>NOT A THREAT</button>
 </div>
 <p>======================================================================================================================================</p>
