--- a/day 31/homework/index2.html
+++ b/day 31/homework/index2.html
@@ -1,27 +1,10 @@
 <link rel="stylesheet" href="style.css">
-<style>
-    body{
-        background-color: black;
-    }
-    h1{
-       text-align: center;
-       color: greenyellow;
-    }
-    p{
-        text-align: center;
-        color: greenyellow;
-    }
-    Img{
-        display: block;
-        margin: auto;
-    }
-</style>
 <h1>GOA</h1>
-<p  style="color: white;">GOA-ში არსებობს ჯგუფები სადაც არიან მენტორები ანუ ადამიანი რომელსაც დამთავრებული აქვს GOA-ს კურსი და ახალა ასწავლის მოსწავლეებს </p>
+<p  class="p2">GOA-ში არსებობს ჯგუფები სადაც არიან მენტორები ანუ ადამიანი რომელსაც დამთავრებული აქვს GOA-ს კურსი და ახალა ასწავლის მოსწავლეებს </p>
 <p> არსებობენ სტუდენტები და მენტორები მაგარამ</p>
-<P style="color: white;">კიდევ სტუდენტებს და მენტორებს შორის არიან მინი-ლიდერები და ლიდერები</P>
+<P class="p2">კიდევ სტუდენტებს და მენტორებს შორის არიან მინი-ლიდერები და ლიდერები</P>
 <p>ლიდერს ყავს სტუდენტების დიდი ჯგუფი და ცდილობს დაეხმაროთ მათ ყველაფერით როდესაც სტუდენტი ვერ გაიგებს გაკვეთილზე ახსნილ მასალას ან დავალებას ვერ აკეთბს უნდა მიწეროს რაზმის ლიდერს , ასევე რაზმის ლიდერი არ ასწავლის მოსწავლეებს</p>
-<P  style="color: white;">მინი-ლიდერერი ასრულებს ლიდერის როლს მაგრამ მას არ ყავს საკუთარი ჯგუფი და ისიც ეხმარება მოსწავლეებს , ყველა ლიდერის ჯგუფში არის რამოდენიმე მინი-ლიდერერი</P>
+<P  class="p2">მინი-ლიდერერი ასრულებს ლიდერის როლს მაგრამ მას არ ყავს საკუთარი ჯგუფი და ისიც ეხმარება მოსწავლეებს , ყველა ლიდერის ჯგუფში არის რამოდენიმე მინი-ლიდერერი</P>
 <P>მაგრამ სანამ მენტორი გახდები შენ უნდა გახდე მინი-მენტორი მისი როლია გაკვეთილზე დააკვირდეს მენტორს დაეხმაროს მას და ა.შ</P>
-<P style="color: white;">ასევე ყველა ლიდერის ჯგუფშია რამდენიმე ჯიტ ჰაბის შემმოწმებელი(ჯიტ ჰაბი არის საიტი სადაც ყველა მოსწავლე ტვირთავს დავალებას)</P>
+<P class="p2">ასევე ყველა ლიდერის ჯგუფშია რამდენიმე ჯიტ ჰაბის შემმოწმებელი(ჯიტ ჰაბი არის საიტი სადაც ყველა მოსწავლე ტვირთავს დავალებას)</P>
 <p>და ყველაზე ბოლო საფეხურზე დგას GOA-ს შემქმნელი ნიკა კეშელავა</p>
